# DSPRO_2

./: .gitignore  .pre-commit-config.yaml  DEV_NOTES.md  README.md  main.py  pyproject.toml  try___clip_embedding.ipynb
data/: Cleaned Apartments.jsonl
exploration/clip/: apartements.jsonl  clip_expl___embedding.ipynb  clip_pca_vizualized.py  clip_test___embeddings_nearest_neighbors.ipynb  clip_test___plot_embeddings.ipynb  create_multimodal_clip_embedding.py  data_expl___apartements.ipynb  multimodal_embeddings.pt
exploration/gemini_emb_2/: apartements.jsonl  create_mulitmodal_gemini_embedding_2.py  gemini_pca_vizualized.py  gemini_test___object_nearest_neighbors.ipynb  gemini_test___plot_embeddings.ipynb  multimodal_embeddings_gemini_2.pt
frontend/: package-lock.json  package.json
frontend/src/app/feed/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: property-card.tsx
frontend/src/data/: mock-properties.ts  onboarding-images.ts
frontend/src/types/: property.ts
src/app/: api.py  main.py  recommendation_schema.py  service.py
