[project]
name = "dspro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.4",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PL", "NPY", "PD"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"