[project]
name = "dspro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.47.0",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pillow>=11.3.0",
    "clip>=0.2.0",
    "open-clip-torch>=3.3.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.4",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PL", "NPY", "PD"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

exclude = ["*.ipynb"]
